css/style.css
* {
    box-sizing: border-box;
    width: 992px;
    font-family: "Raleway", sans-serif;
    color: #000000;
    padding: 10px 10px;
}

/* body{
    max-width: inherit;
    margin:auto;
    overflow-x: hidden;
} */

i {
    font-family: "Font Awesome 5 Pro";
    font-weight: 900;
    width: 5%;
    vertical-align: middle;
}

/*  start of header css */
header {
    display: flex;
    flex-flow: row nowrap;
    width: inherit;
    gap: 50.5%;
    padding-bottom: 0;
}

.h-img-wrapper {
    width: 45%;
}

.h-img-wrapper img {
    width: 80px;
    height: 58px;
    padding-left: 0px;
    margin: 0 0 0 0px;
}

@media only screen and (min-width: 769px) {
    .h-img-wrapper2 {
        display: none;
    }
}

nav {
    width: 55%;
}

@media only screen and (min-width: 769px) {
    nav li:hover {
        border-top: 3px solid #0065fc;
    }
}


.nav-menu {
    padding: 0 0 0 23px;
    margin: 0;
    width: 100%;
}

.nav-menu li {
    display: inline;
    list-style-type: none;
    padding-top: 42px;
    font-size: 12px;
}

.nav-menu li a:link {
    text-decoration: none;
    color: #303234;
}

.nav-menu li a:visited {
    text-decoration: none;
    color: #303234;
}

.nav-menu li a:active {
    text-decoration: none;
    color: #303234;
}

.nav-menu li a:hover {
    text-decoration: none;
    color: #0065fc;
}

/* responsive css for header / page setup (tablet ; mobile nested) */
@media screen and (max-width: 768px) {
    * {
        width: 768px;
        padding: 5px 5px;
    }

    main {
        padding-top: 0px;
        padding-left: 20px;
        margin-top: 20px;
    }

    header {
        flex-flow: column nowrap;
        gap: 30px;
        padding-bottom: 15px;
        padding-left: 0px;
        margin-left: -10px;
    }

    .h-img-wrapper {
        display: none;
    }

    .h-img-wrapper2 {
        width: 100%;
        padding-left: 235px;
    }

    .h-img-wrapper2 img {
        width: 255px;
        height: 125px;
    }

    nav {
        width: 100%;
        padding-left: 0;
    }

    nav li:hover {
        border-bottom: 3px solid #0065fc;
    }

    .nav-menu {
        padding: 0;
    }

    .nav-menu li {
        padding-top: 0;
        padding-bottom: 8px;
        padding-left: 100px;
        padding-right: 100px;
        border-bottom: 3px solid #F2F2F2;
        font-size: 26px;
    }

    @media only screen and (max-width: 500px) {
        * {
            width: 500px;
        }

        main {
            padding-left: 10px;
            margin-top: 10px;
        }

        .h-img-wrapper2 {
            padding-left: 130px;
        }

        .h-img-wrapper2 img {
            width: 155px;
            height: 80px;
        }

        .nav-menu li {
            padding-left: 30px;
            padding-right: 50px;
            font-size: 20px;
        }
    }
}



/* main section css for spacing purposes */
@media only screen and (min-width: 769px) {
    main {
        padding-top: 0;
        margin-top: -20px;
    }

}



/* start of text above search bar css */
.welcome-container {
    line-height: 0px;
    color: black;
    margin-left: -5px;
    padding-left: 5px;
}

@media only screen and (min-width: 769px) {
    .welcome-container h1 {
        display: none;
    }

    .welcome-container h2 {
        display: none;
    }
}

.welcome-container h4 {
    padding-top: 0;
    padding-bottom: 1px;
}

.welcome-container p {
    font-size: 11.7px;
    padding-left: 9px;
    padding-top: 0;
    padding-bottom: 0;
}

/* responsive css for welcome section (tablet ; mobile nested) */
@media only screen and (max-width: 768px) {
    .welcome-container {
        width: 100%;
    }

    .welcome-container h1 {
        padding-top: 0;
        padding-bottom: 10px;
    }

    .welcome-container h2 {
        display: none;
    }

    .welcome-container h4 {
        display: none;
    }

    .welcome-container p {
        font-size: 22px;
        padding-left: 3px;
    }

    @media only screen and (max-width: 500px) {
        .welcome-container {
            line-height: normal;
        }

        .welcome-container h1 {
            display: none;
        }

        .welcome-container h2 {
            display: block;
            padding-top: 0;
            padding-left: 3px;
            word-break: normal;
        }

        .welcome-container p {
            font-size: 18px;
            padding-left: 2px;
            margin-top: -15px;
        }
    }

}


/* start of search bar css */
.search-container {
    padding: 0px;
    position: relative;
    right: 2px;
}

form {
    width: 100%;
    padding-top: 0;
}

#gps-btn {
    border: 1px solid #f2f2f2;
    background-color: #f2f2f2;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    width: 4%;
    height: 33px;
    padding-bottom: 1px;
    padding-top: 1px;
    position: relative;
    bottom: 0.5px;
}

#gps-btn i {
    position: relative;
    right: 6px;
    bottom: 1px;
    font-size: 12px;
}

#query {
    width: 18%;
    border: 1px solid #f2f2f2;
    position: relative;
    right: 6px;
    font-weight: bold;
    padding-top: 7px;
    padding-bottom: 6px;
}

#query::placeholder {
    color: black;
    opacity: 1;
    font-weight: bold;
    font-size: 13px;
    padding: 5px 0px;
}

#btn-search {
    width: 7%;
    background-color: #0065fc;
    border-width: 0px;
    color: white;
    position: relative;
    right: 12px;
    font-size: 12px;
    padding: 9.5px 0px;
    top: -2px;
    font-weight: bold;
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
}

@media only screen and (min-width: 769px) {
    #btn-glass {
        display: none;
    }
}
/* ... */

